show for list.bookmark connected

--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -7,6 +7,6 @@
   </div>
 
         <% @list.bookmarks.each do |bookmark| %>
-        <p><%= bookmark.movie %></p>
+        <p><%= bookmark.movie.title %></p>
         <p><%= bookmark.comment %></p>
         <% end %>
