started on scss

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,4 +1,7 @@
-<%= link_to 'Create a new list', new_list_path %>
+<div class= "create-list-link">
+  <%= link_to 'Create a new list', new_list_path %>
+</div>
+
 <% @lists.each do |list| %>
   <div class="card" style="width: 18rem;">
     <img class="card-img-top" src="https://picsum.photos/200/300?random=1" alt="Card image cap">
