implemented flex box

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -2,12 +2,14 @@
   <%= link_to 'Create a new list', new_list_path %>
 </div>
 
-<% @lists.each do |list| %>
-  <div class="card" style="width: 18rem;">
-    <img class="card-img-top" src="https://picsum.photos/200/300?random=1" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title"><%= list.name %></h5>
-      <%= link_to 'See inside list', list_path(list.id) %>
+<div class="flex-container">
+  <% @lists.each do |list| %>
+    <div class="card" style="width: 18rem;">
+      <img class="card-img-top" src="https://picsum.photos/200/300?random=1" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title"><%= list.name %></h5>
+        <%= link_to 'See inside list', list_path(list.id) %>
+      </div>
     </div>
-  </div>
-<% end %>
+  <% end %>
+</div>
