--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -8,13 +8,15 @@
 
 
 
-<% @list.bookmarks.each do |bookmark| %>
-<div class="card" style="width: 18rem;">
-  <img class="card-img-top" src=<%= bookmark.movie.poster_url %> alt="Card image cap">
-  <div class="card-body">
-    <h5 class="card-title"><%= bookmark.movie.title %></h5>
-    <P class= "card-title"><%= bookmark.comment %></P>
-    <%= link_to 'Details', movie_path(bookmark.movie.id) %>
-  </div>
+<div class="flex-container">
+  <% @list.bookmarks.each do |bookmark| %>
+    <div class="card" style="width: 18rem;">
+      <img class="card-img-top" src=<%= bookmark.movie.poster_url %> alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title"><%= bookmark.movie.title %></h5>
+        <P class= "card-title"><%= bookmark.comment %></P>
+        <%= link_to 'Details', movie_path(bookmark.movie.id) %>
+      </div>
+    </div>
+  <% end %>
 </div>
-<% end %>
