--- a/app/assets/stylesheets/lists.scss
+++ b/app/assets/stylesheets/lists.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the lists controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.flex-container {
+  display: flex;
+  background-color: gray;
+}
+
+
+// .flex-container > div {
+//   background-color: #f1f1f1;
+//   margin: 10px;
+//   padding: 20px;
+//   font-size: 16px;
+// }
