--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -8,3 +8,16 @@
     flex-direction: column;
     align-items: center;
 }
+
+.flex-container {
+  display: flex;
+  background-color: gray;
+}
+
+
+.flex-container > div {
+  background-color: #f1f1f1;
+  margin: 10px;
+  padding: 20px;
+  font-size: 16px;
+}
