--- a/app/assets/stylesheets/bookmarks.scss
+++ b/app/assets/stylesheets/bookmarks.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the bookmarks controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.flex-container {
+  display: flex;
+  background-color: gray;
+  columns: 200px 4;
+}
+
+.card {
+  columns: 200px 3;
+}
