--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -8,6 +8,7 @@
       <img class="card-img-top" src="https://picsum.photos/200/300?random=1" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title"><%= list.name %></h5>
+        <h5 class="inside"><%= list.bookmarks.count %> Movie(s)</h5>
         <%= link_to 'See inside list', list_path(list.id) %>
       </div>
     </div>
