--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,14 @@
   </head>
 
   <body>
+
+    <div class="banner">
+      <div class="container">
+      <h1>Watch List</h1>
+      <p>Create a watchlist for every occasion and never stall on your movie nights</p>
+      </div>
+    </div>
+
     <%= yield %>
   </body>
 </html>
