--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,9 +1,10 @@
+
 <div class="card" style="width: 18rem;">
   <img class="card-img-top" src="<%= @movie.poster_url %>" alt="Card image cap">
   <div class="card-body">
     <h5 class="card-title"><%= @movie.title %></h5>
     <p class="card-text"><%= @movie.overview %></p>
-    <p class="card-text"><%= @movie.rating %></p>
+    <p class="card-text">Rating: <%= @movie.rating %></p>
      <%= link_to 'Back to top', lists_path %>
   </div>
 </div>
