button added for create

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,7 @@
   padding: 200px 0;
 
    h1 {
+     font-family: 'Righteous', sans-serif;
       margin-left: 36px;
       font-size: 86px;
       color: white;
@@ -38,7 +39,8 @@
 }
 
 .container {
-  margin-top: 126px;
+  width: 1036px;
+  margin-top: 46px;
   margin-left: 0px;
   background: rgba(68, 67, 67, 0.7);
   padding: 20px;
