--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -21,3 +21,33 @@
   padding: 20px;
   font-size: 16px;
 }
+
+.button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+
+.buttonpurple {
+  font-size: 18px;
+  text-decoration: none;
+  font-family: 'Righteous', sans-serif;
+  background-color: rgb(180, 180, 180);
+  color: black;
+  border: 2px solid #525252ef;
+  border-radius: 5px;
+}
+
+.buttonpurple:hover {
+  text-decoration: none;
+  background-color: #fa91b4;
+  color: rgb(139, 6, 117);
+}
