--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -12,7 +12,7 @@
   <% @lists.each do |list| %>
     <div class="card" style="width: 18rem;">
     <%# image hosting %>
-    <%= cl_image_tag @article.photo.key,  crop: :thumb %>
+    <%= cl_image_tag list.photo.key, height: 300, width: 400, crop: :fill %>
       <img class="card-img-top" src="https://picsum.photos/200/300?random=1" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title"><%= list.name %></h5>
