--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -11,8 +11,10 @@
 <div class="flex-container">
   <% @lists.each do |list| %>
     <div class="card" style="width: 18rem;">
-    <%# image hosting %>
+    <% if list.photo.attached? %>
     <%= cl_image_tag list.photo.key, height: 300, width: 400, crop: :fill %>
+    <% end %>
+    <%# image hosting %>
       <img class="card-img-top" src="https://picsum.photos/200/300?random=1" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title"><%= list.name %></h5>
