--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -51,3 +51,45 @@
   background-color: #fa91b4;
   color: rgb(139, 6, 117);
 }
+
+
+//Indes Page Card with Hover//
+
+.card-container {
+  min-width: 0;
+  margin: auto;
+  display: flex;
+  flex-shrink: inherit;
+  flex-wrap: wrap;
+  flex-direction: row;
+  row-gap: 10px;
+  column-gap: 10px;
+  justify-content: center;
+  background-color: rgb(131, 16, 207);
+  width: 80vw;
+  height: 100%;
+}
+
+@media (max-width: 700px) {
+  .card-container {
+    flex-direction: column;
+  }
+}
+
+
+
+.card-list {
+  // positional //
+  background-color: rgb(206, 136, 7);
+  padding: 20px;
+  margin: 10px;
+  display: grid;
+  height: auto;
+  width: 460px;
+  box-shadow: 5px 5px 15px rgba(0,0,0,0.9);
+  text-align: center;
+
+  // style //
+  border-radius: 8px;
+
+}
