--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -14,11 +14,11 @@
 <div class="flex-container">
   <% @lists.each do |list| %>
     <div class="card" style="width: 18rem;">
-    <% if list.photo.attached? %>
-    <%= image_tag list.photo, height: 300, width: 400, crop: :fill %>
-    <% end %>
     <%# image hosting %>
-      <img class="card-img-top" src="https://picsum.photos/200/300?random=1" alt="Card image cap">
+     <%# <img class="card-img-top" src="ttp://placekitten.com/200/300" alt="Card image cap"> %>
+    <% if list.photo.attached? %>
+      <img class="card-img-top" <%= image_tag list.photo, height: 300, width: 500, crop: :fill %>
+    <% end %>
       <div class="card-body">
         <h5 class="card-title"><%= list.name %></h5>
         <h5 class="inside"><%= list.bookmarks.count %> Movie(s)</h5>
@@ -26,4 +26,115 @@
       </div>
     </div>
   <% end %>
+</div>
+
+<%# card component %>
+<div class ="card-container">
+  <div class="card-list">
+    <div class="card-image"></div>
+     <img src="http://placekitten.com/200/300" alt="Card image cap">
+    <div class="card-text"></div>
+      <span class="date">6 days ago</span>
+    <div class="card-stats"></div>
+    <h2>Post One</h2>
+    <p>Some kind of description</p>
+  </div>
+
+
+  <div class="card-list">
+    <div class="card-image"></div>
+      <img src="http://placekitten.com/200/300" alt="Card image cap">
+    <div class="card-text"></div>
+      <span class="date">6 days ago</span>
+    <div class="card-stats"></div>
+    <h2>Post One</h2>
+    <p>Some kind of description</p>
+  </div>
+
+
+
+  <div class="card-list">
+    <div class="card-image"></div>
+      <img src="http://placekitten.com/200/300" alt="Card image cap">
+    <div class="card-text"></div>
+      <span class="date">6 days ago</span>
+    <div class="card-stats"></div>
+    <h2>Post One</h2>
+    <p>Some kind of description</p>
+  </div>
+
+
+
+  <div class="card-list">
+    <div class="card-image"></div>
+      <img src="http://placekitten.com/200/300" alt="Card image cap">
+    <div class="card-text"></div>
+      <span class="date">6 days ago</span>
+    <div class="card-stats"></div>
+    <h2>Post One</h2>
+    <p>Some kind of description</p>
+  </div>
+
+  <div class="card-list">
+    <div class="card-image"></div>
+      <img src="http://placekitten.com/200/300" alt="Card image cap">
+    <div class="card-text"></div>
+      <span class="date">6 days ago</span>
+    <div class="card-stats"></div>
+    <h2>Post One</h2>
+    <p>Some kind of description</p>
+  </div>
+
+    <div class="card-list">
+    <div class="card-image"></div>
+      <img src="http://placekitten.com/200/300" alt="Card image cap">
+    <div class="card-text"></div>
+      <span class="date">6 days ago</span>
+    <div class="card-stats"></div>
+    <h2>Post One</h2>
+    <p>Some kind of description</p>
+  </div>
+
+  <div class="card-list">
+    <div class="card-image"></div>
+      <img src="http://placekitten.com/200/300" alt="Card image cap">
+    <div class="card-text"></div>
+      <span class="date">6 days ago</span>
+    <div class="card-stats"></div>
+    <h2>Post One</h2>
+    <p>Some kind of description</p>
+  </div>
+
+    <div class="card-list">
+    <div class="card-image"></div>
+      <img src="http://placekitten.com/200/300" alt="Card image cap">
+    <div class="card-text"></div>
+      <span class="date">6 days ago</span>
+    <div class="card-stats"></div>
+    <h2>Post One</h2>
+    <p>Some kind of description</p>
+  </div>
+
+
+  <div class="card-list">
+    <div class="card-image"></div>
+      <img src="http://placekitten.com/200/300" alt="Card image cap">
+    <div class="card-text"></div>
+      <span class="date">6 days ago</span>
+    <div class="card-stats"></div>
+    <h2>Post One</h2>
+    <p>Some kind of description</p>
+  </div>
+
+
+
+  <div class="card-list">
+    <div class="card-image"></div>
+      <img src="http://placekitten.com/200/300" alt="Card image cap">
+    <div class="card-text"></div>
+      <span class="date">6 days ago</span>
+    <div class="card-stats"></div>
+    <h2>Post One</h2>
+    <p>Some kind of description</p>
+  </div>
 </div>
