--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -31,110 +31,185 @@
 <%# card component %>
 <div class ="card-container">
   <div class="card-list">
-    <div class="card-image"></div>
+    <div class="image-container">
      <img src="http://placekitten.com/200/300" alt="Card image cap">
-    <div class="card-text"></div>
+    </div>
+
+    <div class="card-text">
+      <p>Some kind of text here</p>
+    </div>
       <span class="date">6 days ago</span>
-    <div class="card-stats"></div>
-    <h2>Post One</h2>
-    <p>Some kind of description</p>
-  </div>
 
-
-  <div class="card-list">
-    <div class="card-image"></div>
-      <img src="http://placekitten.com/200/300" alt="Card image cap">
-    <div class="card-text"></div>
-      <span class="date">6 days ago</span>
-    <div class="card-stats"></div>
-    <h2>Post One</h2>
-    <p>Some kind of description</p>
-  </div>
-
-
-
-  <div class="card-list">
-    <div class="card-image"></div>
-      <img src="http://placekitten.com/200/300" alt="Card image cap">
-    <div class="card-text"></div>
-      <span class="date">6 days ago</span>
-    <div class="card-stats"></div>
-    <h2>Post One</h2>
-    <p>Some kind of description</p>
-  </div>
-
-
-
-  <div class="card-list">
-    <div class="card-image"></div>
-      <img src="http://placekitten.com/200/300" alt="Card image cap">
-    <div class="card-text"></div>
-      <span class="date">6 days ago</span>
-    <div class="card-stats"></div>
-    <h2>Post One</h2>
-    <p>Some kind of description</p>
+    <div class="card-stats">
+      <h2>Post One</h2>
+      <p>Some kind of description</p>
+    </div>
   </div>
 
   <div class="card-list">
-    <div class="card-image"></div>
-      <img src="http://placekitten.com/200/300" alt="Card image cap">
-    <div class="card-text"></div>
-      <span class="date">6 days ago</span>
-    <div class="card-stats"></div>
-    <h2>Post One</h2>
-    <p>Some kind of description</p>
-  </div>
+    <div class="image-container">
+     <img src="http://placekitten.com/200/300" alt="Card image cap">
+    </div>
 
+    <div class="card-text">
+      <p>Some kind of text here</p>
+    </div>
+      <span class="date">6 days ago</span>
+
+    <div class="card-stats">
+      <h2>Post One</h2>
+      <p>Some kind of description</p>
+    </div>
+  </div>
     <div class="card-list">
-    <div class="card-image"></div>
-      <img src="http://placekitten.com/200/300" alt="Card image cap">
-    <div class="card-text"></div>
-      <span class="date">6 days ago</span>
-    <div class="card-stats"></div>
-    <h2>Post One</h2>
-    <p>Some kind of description</p>
-  </div>
+    <div class="image-container">
+     <img src="http://placekitten.com/200/300" alt="Card image cap">
+    </div>
 
-  <div class="card-list">
-    <div class="card-image"></div>
-      <img src="http://placekitten.com/200/300" alt="Card image cap">
-    <div class="card-text"></div>
+    <div class="card-text">
+      <p>Some kind of text here</p>
+    </div>
       <span class="date">6 days ago</span>
-    <div class="card-stats"></div>
-    <h2>Post One</h2>
-    <p>Some kind of description</p>
-  </div>
 
+    <div class="card-stats">
+      <h2>Post One</h2>
+      <p>Some kind of description</p>
+    </div>
+  </div>
     <div class="card-list">
-    <div class="card-image"></div>
-      <img src="http://placekitten.com/200/300" alt="Card image cap">
-    <div class="card-text"></div>
+    <div class="image-container">
+     <img src="http://placekitten.com/200/300" alt="Card image cap">
+    </div>
+
+    <div class="card-text">
+      <p>Some kind of text here</p>
+    </div>
       <span class="date">6 days ago</span>
-    <div class="card-stats"></div>
-    <h2>Post One</h2>
-    <p>Some kind of description</p>
+
+    <div class="card-stats">
+      <h2>Post One</h2>
+      <p>Some kind of description</p>
+    </div>
+  </div>
+    <div class="card-list">
+    <div class="image-container">
+     <img src="http://placekitten.com/200/300" alt="Card image cap">
+    </div>
+
+    <div class="card-text">
+      <p>Some kind of text here</p>
+    </div>
+      <span class="date">6 days ago</span>
+
+    <div class="card-stats">
+      <h2>Post One</h2>
+      <p>Some kind of description</p>
+    </div>
+  </div>
+    <div class="card-list">
+    <div class="image-container">
+     <img src="http://placekitten.com/200/300" alt="Card image cap">
+    </div>
+
+    <div class="card-text">
+      <p>Some kind of text here</p>
+    </div>
+      <span class="date">6 days ago</span>
+
+    <div class="card-stats">
+      <h2>Post One</h2>
+      <p>Some kind of description</p>
+    </div>
+  </div>
+    <div class="card-list">
+    <div class="image-container">
+     <img src="http://placekitten.com/200/300" alt="Card image cap">
+    </div>
+
+    <div class="card-text">
+      <p>Some kind of text here</p>
+    </div>
+      <span class="date">6 days ago</span>
+
+    <div class="card-stats">
+      <h2>Post One</h2>
+      <p>Some kind of description</p>
+    </div>
+  </div>
+    <div class="card-list">
+    <div class="image-container">
+     <img src="http://placekitten.com/200/300" alt="Card image cap">
+    </div>
+
+    <div class="card-text">
+      <p>Some kind of text here</p>
+    </div>
+      <span class="date">6 days ago</span>
+
+    <div class="card-stats">
+      <h2>Post One</h2>
+      <p>Some kind of description</p>
+    </div>
+  </div>
+    <div class="card-list">
+    <div class="image-container">
+     <img src="http://placekitten.com/200/300" alt="Card image cap">
+    </div>
+
+    <div class="card-text">
+      <p>Some kind of text here</p>
+    </div>
+      <span class="date">6 days ago</span>
+
+    <div class="card-stats">
+      <h2>Post One</h2>
+      <p>Some kind of description</p>
+    </div>
+  </div>
+    <div class="card-list">
+    <div class="image-container">
+     <img src="http://placekitten.com/200/300" alt="Card image cap">
+    </div>
+
+    <div class="card-text">
+      <p>Some kind of text here</p>
+    </div>
+      <span class="date">6 days ago</span>
+
+    <div class="card-stats">
+      <h2>Post One</h2>
+      <p>Some kind of description</p>
+    </div>
+  </div>
+    <div class="card-list">
+    <div class="image-container">
+     <img src="http://placekitten.com/200/300" alt="Card image cap">
+    </div>
+
+    <div class="card-text">
+      <p>Some kind of text here</p>
+    </div>
+      <span class="date">6 days ago</span>
+
+    <div class="card-stats">
+      <h2>Post One</h2>
+      <p>Some kind of description</p>
+    </div>
+  </div>
+    <div class="card-list">
+    <div class="image-container">
+     <img src="http://placekitten.com/200/300" alt="Card image cap">
+    </div>
+
+    <div class="card-text">
+      <p>Some kind of text here</p>
+    </div>
+      <span class="date">6 days ago</span>
+
+    <div class="card-stats">
+      <h2>Post One</h2>
+      <p>Some kind of description</p>
+    </div>
   </div>
 
-
-  <div class="card-list">
-    <div class="card-image"></div>
-      <img src="http://placekitten.com/200/300" alt="Card image cap">
-    <div class="card-text"></div>
-      <span class="date">6 days ago</span>
-    <div class="card-stats"></div>
-    <h2>Post One</h2>
-    <p>Some kind of description</p>
-  </div>
-
-
-
-  <div class="card-list">
-    <div class="card-image"></div>
-      <img src="http://placekitten.com/200/300" alt="Card image cap">
-    <div class="card-text"></div>
-      <span class="date">6 days ago</span>
-    <div class="card-stats"></div>
-    <h2>Post One</h2>
-    <p>Some kind of description</p>
-  </div>
 </div>
