--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -4,7 +4,7 @@
     <div class="card-body">
       <h5 class="card-title"><%= movie.title %></h5>
       <p class="card-text"><%= movie.rating %></p>
-      <%= link_to 'See details', lists_path(movie.id) %>
+      <%= link_to 'See details', lists_path(movie.id), class: 'btn btn-secondary' %>
     </div>
   </div>
 <% end %>
