--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -4,12 +4,12 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
 
+
+
+
 <div class= "create-list-link">
   <%= link_to 'Create a new list', new_list_path, class: 'button buttonpurple' %>
 </div>
-
-
-
 
 
 <%# card component %>
@@ -32,7 +32,7 @@
       <span class="date">Created: 1/22/2022 </span>
     </div>
     </div>
-      <%= link_to 'See inside list', list_path(list), class: 'btn btn-primary' %>
+      <%= link_to 'See inside list', list_path(list), class: 'btn btn-secondary' %>
   </div>
    <% end %>
 </div>
