--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,15 +1,13 @@
-<div class="card" style="width: 18rem;">
+<div class="card" style="width: 100vw;">
     <div class="card-body">
       <h1 class="card-title"><%= @list.name %></h1>
       <h3 class="bookmark-count"><%= @list.bookmarks.count %> movie(s) in this list</h3>
-      <%= link_to 'Add to list',  new_list_bookmark_path(@list) %> |
-      <%= link_to 'Back to lists', lists_path %>
+      <%= link_to 'Add to list',  new_list_bookmark_path(@list), class: 'btn btn-secondary' %>
+      <%= link_to 'Back to lists', lists_path, class: 'btn btn-secondary'%>
+      <%= link_to 'Remove List', new_list_path(@list), method: :delete,  data: { confirm: 'Are you sure you want to delete this list?'}, class: 'btn btn-secondary' %>
     </div>
   </div>
 
-<div class= "destroy-list-link">
-  <%= link_to 'Remove List', new_list_path(@list), method: :delete %>
-</div>
 
 
 <div class="flex-container">
