--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,9 +1,14 @@
 // Import page-specific CSS files here.
 @import "home";
 
+
+
 .create-list-link {
-    display: flex;
-    align-content: space-around;
+    margin-bottom: -100px;
+    margin-top: 20px;
+    margin-left: 56px;
+    // display: flex;
+    // align-content: space-around;
     flex-wrap: nowrap;
     flex-direction: column;
     align-items: center;
@@ -56,7 +61,7 @@
 //Indes Page Card with Hover//
 
 .card-container {
-  padding: 46px;
+  padding: 108px;
   min-width: 0;
   margin: auto;
   display: flex;
