--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,6 @@
+
+
+
 // Graphical variables
 @import "config/fonts";
 @import "config/colors";
@@ -11,6 +14,7 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+@import "pages/show";
 
 .banner {
   height: 600px;
