--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -100,6 +100,13 @@
   // style //
   color: #1f1f1f;
   border-radius: 8px;
+  h2 {
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+  }
+  p {
+    font-family: 'Roboto', sans-serif;
+  }
 
 }
 
@@ -127,4 +134,10 @@
   p {
     font-size: 20px;
   }
+}
+
+
+.list-title-container {
+  height: 500px;
+  width: 100vw;
 }
