--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -6,7 +6,8 @@
 .create-list-link {
     margin-bottom: -100px;
     margin-top: 20px;
-    margin-left: 56px;
+    display: flex;
+    justify-content: center;
     // display: flex;
     // align-content: space-around;
     flex-wrap: nowrap;
@@ -121,7 +122,7 @@
   margin-right: auto;
   margin-top: -20px;
   margin: -20px;
-
+  background-position: center;
 }
 
 .profile-image {
@@ -134,10 +135,4 @@
   p {
     font-size: 20px;
   }
-}
-
-
-.list-title-container {
-  height: 500px;
-  width: 100vw;
 }
