--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -102,11 +102,11 @@
   color: #1f1f1f;
   border-radius: 8px;
   h2 {
-    font-family: 'Roboto', sans-serif;
-    font-weight: bold;
+    font-family: 'Fredericka the Great', sans-serif;
   }
   p {
-    font-family: 'Roboto', sans-serif;
+    margin-top: 12px;
+    font-family: 'Fredericka the Great', sans-serif;
   }
 
 }
