--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -6,10 +6,10 @@
   position: relative;
 
   h1 {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Fredericka the Great', sans-serif;
   }
   p {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Fredericka the Great', sans-serif;
   }
 }
 
