--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -29,7 +29,7 @@
       <h2><%= list.name %></h2>
       <p><%= list.bookmarks.count %> Movie(s)</p>
     <div class="card-text">
-      <span class="date">Created: 1/22/2022 </span>
+      <%# <span class="date">Created: 1/22/2022 </span> %>
     </div>
     </div>
       <%= link_to 'See inside list', list_path(list), class: 'btn btn-secondary' %>
